fix: weird summary element behaviour on mobile

--- a/styles/pages/home/faq.scss
+++ b/styles/pages/home/faq.scss
@@ -1,8 +1,10 @@
 details {
   summary {
     list-style: none;
-    display: flex;
-    justify-content: space-between;
+  
+    @include media('<phone'){
+  
+    }
   }
   summary::-webkit-details-marker {
     display: none;
@@ -49,6 +51,8 @@ details {
   }
 
   &__question {
+    display: flex;
+    justify-content: space-between;
     @extend %title-24;
     border-top: solid 1px $color-black;
     cursor: pointer;
@@ -65,7 +69,7 @@ details {
       transition: transform .3s ease;
       transform-origin: 65%;
       @include media('<phone') {
-        fill: $color-black;
+        display: none;
       }
       &.active {
         transform: rotate(180deg);
